--- a/workflows/deploy.yml
+++ b/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: "master" # Automatic build on master changes
+    branches: "main" # Automatic build on master changes
   workflow_dispatch: # If you want to be able to build it manually from any branch
 
 jobs:
